--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.13.1",
     "jest": "^24.8.0",
+    "mock-require": "^3.0.3",
     "react": "^16.8.0",
     "react-dom": "^16.8.6",
-    "react-test-renderer": "^16.8.6"
+    "react-test-renderer": "^16.8.6",
+    "react-testing-library": "^7.0.1"
   }
 }
