--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "react-holochain-hooks",
-  "version": "0.2.0",
+  "name": "@hylozoic/react-holochain-hooks",
+  "version": "0.3.0",
   "description": "React hooks integration of hc-web-client",
-  "main": "src/index.js",
+  "main": "lib/index.js",
   "scripts": {
     "build": "./node_modules/.bin/babel src --out-dir lib --presets=@babel/env --ignore '**/*.test.js'",
     "test": "jest"
